Download sample & assay data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,13 @@ export(pluto_get_project_experiments)
 export(pluto_is_logged_in)
 export(pluto_login)
 export(pluto_logout)
+export(pluto_read_assay)
 export(pluto_read_assay_data)
 export(pluto_read_data)
 export(pluto_read_project_experiments)
 export(pluto_read_results)
+export(pluto_read_sample)
 export(pluto_read_sample_data)
 importFrom(tidyr,"%>%")
+importFrom(utils,download.file)
+importFrom(utils,read.csv)
