--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(pluto_read_assay)
 export(pluto_read_assay_data)
 export(pluto_read_data)
 export(pluto_read_project_experiments)
+export(pluto_read_result)
 export(pluto_read_results)
 export(pluto_read_sample)
 export(pluto_read_sample_data)
