--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -12,7 +12,7 @@ jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
 
-    environment: production
+    environment: build-test
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
