--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,17 @@ export(pluto_add_experiment_plot)
 export(pluto_download_assay_data)
 export(pluto_download_results)
 export(pluto_download_sample_data)
+export(pluto_get_experiment)
 export(pluto_get_experiment_data)
+export(pluto_get_experiment_plots)
 export(pluto_get_experiment_results)
-export(pluto_get_plot_details)
+export(pluto_get_experiments)
+export(pluto_get_plot)
+export(pluto_get_project)
+export(pluto_get_project_experiments)
+export(pluto_get_projects)
 export(pluto_is_logged_in)
 export(pluto_list_experiment_analyses)
-export(pluto_list_experiments)
-export(pluto_list_project_experiments)
-export(pluto_list_projects)
 export(pluto_login)
 export(pluto_logout)
 export(pluto_read_assay_data)
