--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,16 +6,16 @@ export(pluto_download_assay_data)
 export(pluto_download_results)
 export(pluto_download_sample_data)
 export(pluto_get_experiment)
+export(pluto_get_experiment_analyses)
 export(pluto_get_experiment_data)
 export(pluto_get_experiment_plots)
-export(pluto_get_experiment_results)
-export(pluto_get_experiments)
+export(pluto_get_experiments_all)
 export(pluto_get_plot)
 export(pluto_get_project)
 export(pluto_get_project_experiments)
-export(pluto_get_projects)
+export(pluto_get_projects_all)
+export(pluto_get_results)
 export(pluto_is_logged_in)
-export(pluto_list_experiment_analyses)
 export(pluto_login)
 export(pluto_logout)
 export(pluto_read_assay_data)
