--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -29,13 +29,16 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       PLUTO_API_TOKEN: ${{ secrets.PLUTO_API_TOKEN }}
-      DB_VOLCANO_PLOT_V2_ID: ${{ vars.DB_VOLCANO_PLOT_V2_ID }}
-      DE_VOLCANO_PLOT_V2_ID: ${{ vars.DE_VOLCANO_PLOT_V2_ID }}
-      EXPERIMENT_ID: ${{ vars.EXPERIMENT_ID }}
-      EXPERIMENT_ID_RNASEQ: ${{ vars.EXPERIMENT_ID_RNASEQ }}
+      PLUTO_TEST_API_TOKEN: ${{ secrets.PLUTO_TEST_API_TOKEN }}
       INVALID_API_TOKEN: ${{ vars.INVALID_API_TOKEN }}
-      PCA_PLOT_ID: ${{ vars.PCA_PLOT_ID }}
-      PROJECT_ID: ${{ vars.PROJECT_ID }}
+      EMPTY_PROJECT_ID: ${{ vars.EMPTY_PROJECT_ID }}
+      NONEMPTY_PROJECT_ID: ${{ vars.NONEMPTY_PROJECT_ID }}
+      EXPERIMENT_ID_RNASEQ: ${{ vars.EXPERIMENT_ID_RNASEQ }}
+      EXPERIMENT_ID_CUTANDRUN: ${{ vars.EXPERIMENT_ID_CUTANDRUN }}
+      EXPERIMENT_ID_MOD: ${{ vars.EXPERIMENT_ID_MOD }}
+      PLOT_ID_PCA: ${{ vars.PLOT_ID_PCA }}
+      PLOT_ID_DE_VOLCANO_V2: ${{ vars.PLOT_ID_DE_VOLCANO_V2 }}
+      PLOT_ID_DB_VOLCANO_V2: ${{ vars.PLOT_ID_DB_VOLCANO_V2 }}
       R_KEEP_PKG_SOURCE: yes
 
     steps:
