Add vars for base urls

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,6 +30,9 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       PLUTO_API_TOKEN: ${{ secrets.PLUTO_API_TOKEN }}
       PLUTO_TEST_API_TOKEN: ${{ secrets.PLUTO_TEST_API_TOKEN }}
+      PLUTO_ENV: ${{ vars.PLUTO_ENV }}
+      PLUTO_API_STAGING: ${{ vars.PLUTO_API_STAGING }}
+      PLUTO_API_PROD: ${{ vars.PLUTO_API_PROD }}
       INVALID_API_TOKEN: ${{ vars.INVALID_API_TOKEN }}
       EMPTY_PROJECT_ID: ${{ vars.EMPTY_PROJECT_ID }}
       NONEMPTY_PROJECT_ID: ${{ vars.NONEMPTY_PROJECT_ID }}
