--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -33,7 +33,7 @@ jobs:
       PLUTO_ENV: ${{ vars.PLUTO_ENV }}
       PLUTO_API_STAGING: ${{ vars.PLUTO_API_STAGING }}
       PLUTO_API_PROD: ${{ vars.PLUTO_API_PROD }}
-      INVALID_API_TOKEN: ${{ vars.INVALID_API_TOKEN }}
+      PLUTO_INVALID_API_TOKEN: ${{ vars.PLUTO_INVALID_API_TOKEN }}
       EMPTY_PROJECT_ID: ${{ vars.EMPTY_PROJECT_ID }}
       NONEMPTY_PROJECT_ID: ${{ vars.NONEMPTY_PROJECT_ID }}
       EXPERIMENT_ID_RNASEQ: ${{ vars.EXPERIMENT_ID_RNASEQ }}
