Add Seurat functions and vignette to R SDK

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,6 +39,7 @@ jobs:
       EXPERIMENT_ID_RNASEQ: ${{ vars.EXPERIMENT_ID_RNASEQ }}
       EXPERIMENT_ID_CUTANDRUN: ${{ vars.EXPERIMENT_ID_CUTANDRUN }}
       EXPERIMENT_ID_MOD: ${{ vars.EXPERIMENT_ID_MOD }}
+      EXPERIMENT_ID_SCRNASEQ: ${{ vars.EXPERIMENT_ID_SCRNASEQ }}
       PLOT_ID_PCA: ${{ vars.PLOT_ID_PCA }}
       PLOT_ID_DE_VOLCANO_V2: ${{ vars.PLOT_ID_DE_VOLCANO_V2 }}
       PLOT_ID_DB_VOLCANO_V2: ${{ vars.PLOT_ID_DB_VOLCANO_V2 }}
