--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Suggests:
     plotly,
     knitr,
     rmarkdown,
-    markdown
+    markdown,
+    Seurat
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
