--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(pluto_read_project_experiments)
 export(pluto_read_results)
 export(pluto_read_sample_data)
 export(pluto_read_seurat_object)
+export(pluto_upload)
+export(pluto_add_experiment_plot)
 importFrom(tidyr,"%>%")
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
