update SDK to user new external analysis methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_cluster_annotations)
 export(export_plotly_to_html)
 export(pluto_add_experiment_plot)
+export(pluto_create_external_plot)
 export(pluto_download_assay_data)
 export(pluto_download_results)
 export(pluto_download_sample_data)
@@ -29,6 +30,7 @@ export(pluto_read_project_experiments)
 export(pluto_read_results)
 export(pluto_read_sample_data)
 export(pluto_read_seurat_object)
+export(pluto_update_external_plot)
 importFrom(tidyr,"%>%")
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
